-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6
-
None
-
6efc9f140 (dev), 319e10f9a (6.7), 2b6ebb68b (6.6), b36d3fcf2 (tqtc/lts-6.5), 553784eb2 (tqtc/lts-6.2), 2c6c9cfd5 (tqtc/lts-5.15)
The Window's visible property is false by default, but its documentation doesn't state its default value - https://doc.qt.io/qt-6/qml-qtquick-window.html#visible-prop.
Unfortunately, the default value for that property is stated only in a code snippet here - https://doc.qt.io/qt-6/qml-qtquick-window.html#transientParent-prop.
Only the QWindow doc has clear information about its state, under a separate header - https://doc.qt.io/qt-6/qwindow.html#visibility-and-windowing-system-exposure and the visible property - https://doc.qt.io/qt-6/qwindow.html#visible-prop
The Window Qml Type should have similar notes about the property.
| For Gerrit Dashboard: QTBUG-120349 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 527530,3 | doc: Mention that Window.visible is false by default | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 527593,2 | doc: Mention that Window.visible is false by default | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 527596,2 | doc: Mention that Window.visible is false by default | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 527598,2 | doc: Mention that Window.visible is false by default | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 527602,2 | doc: Mention that Window.visible is false by default | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 527640,2 | doc: Mention that Window.visible is false by default | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |