doc: Mention that Window.visible is false by default

Fixes: QTBUG-120349
Pick-to: 6.5 6.2 5.15
Change-Id: I070927d0bd8b454925b4a2ab0ddf259d47d31335
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 6efc9f1406a4f08f7a04d3bb52a4c19214d5cbb1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 319e10f9a9b16ad9f8576e5efe2220eebf49291a)