src/quick/items/qquickwindow.cpp
@@ -3461,6 +3461,8 @@ void QQuickWindow::endExternalCommands()
 
     Setting visible to false is the same as setting \l visibility to \l {QWindow::}{Hidden}.
 
+    The default value is \c false, unless overridden by setting \l visibility.
+
     \sa visibility
  */
 
